# caixinha-automatica

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily-reminder.yml  generate-charges.yml  process-payments.yml  test-e2e.yml
api/: webhook.py
src/jobs/: generate_charges.py  process_payments.py  send_reminders.py  test_charge.py
src/services/: __init__.py  efi.py  email.py  sheets.py
src/templates/: charge_email.html  confirmation_email.html  reminder_email.html
src/tests/: test_charge.py  test_process_payment.py
src/utils/: business_days.py  config.py
